--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="./css/style.css">
   <!-- <script src="./js/scripts.js" type="module" defer></script> -->
   <script src="./js/scriptsSP.js" type="module" defer></script>
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+ <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 </head>
 
 <body>
+  <div id="container">
   <header>
 
     <div id="logo">
@@ -30,7 +31,7 @@
   </header>
   <main>
 
-    <div class="container">
+    <div class="contenedor">
 
       <h2>Administración</h2>
       <div id="fotoFront"><img src="./img/carFront.jpg"> </div>
@@ -107,6 +108,7 @@
       <li>Todos los derechos reservados 2021</li>
     </ul>
   </footer>
+</div>
 </body>
 
 </html>
