--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="./css/style.css">
   <!-- <script src="./js/scripts.js" type="module" defer></script> -->
   <script src="./js/scriptsSP.js" type="module" defer></script>
- <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
   <div id="container">
-  <header>
+<div class="row">
+  <header class="cabecera">
 
     <div id="logo">
       <h1>PISTEANDO</h1>
@@ -29,6 +30,7 @@
       <li><a href="#">Contacto</a></li>
     </ul>
   </header>
+
   <main>
 
     <div class="contenedor">
@@ -95,7 +97,7 @@
         </form>
       </div>
 
-      <div id="divLista"></div>
+      <div id="divLista" class="table table-striped table-hover"></div>
 
     </div>
   </main>
@@ -108,6 +110,7 @@
       <li>Todos los derechos reservados 2021</li>
     </ul>
   </footer>
+</div>
 </div>
 </body>
 
